scalr-ctl Changelog
===============


Changelog on Scalr Wiki: https://scalr-labs.atlassian.net/wiki/pages/viewpage.action?pageId=109805613


Version 2.0.19
--------------

Improvements

    ST-237 Simplify configuration process


Version 2.0.18
--------------

New feature

    ST-210 Farm Template compatibility
    ST-233 Allow to define custom scaling metrics on Account scope
    ST-235 scalr-ctl shows only first error form list

Fixed

    ST-234 Menu fails when spec files are outdated


Version 2.0.17
--------------

New feature

    ST-232 Add support for Role orchestration update method in Global scope
    ST-231 Add support of Orchestration rules on user scope


Version 2.0.16
--------------

Improvements

    ST-229 Support default value for properties

Fixed

    ST-234 Menu fails when spec files are outdated


Version 2.0.15
--------------

Fixed

    ST-226 "servers list" command lost instanceType column in table view


Version 2.0.14
--------------

Improvements

    ST-222 Update instance type for servers
    ST-216 Add support for new-style account level API methods
    ST-224 Backward compatibility for account level API methods

Fixed

    ST-221 Farm roles > Unable to set Bootstrapping option


Version 2.0.12
--------------

New feature

    ST-214 Support role cloning API methods
    ST-217 Support webhook-endpoints list action
    ST-218 Endpoint with instance type info

Version 2.0.11
--------------

New feature

    ST-213 Manage Farm Roles storage


Version 2.0.10
--------------

Fixed

    ST-211 Can't create/update Cloud Credentials


Version 2.0.8
--------------

Improvements

    ST-207 Redundand commands get-instance-configuration, get-placement-configuration,
    update-instance-configuration and update-placement-configuration removed.

    ST-208 Filter nested objects


Version 2.0.7
--------------

New feature

    ST-205 Farm Suspend functionality


Version 2.0.6
--------------

New feature
