@@ -11,6 +11,7 @@ Version 2.0.19
 Improvements
 
     ST-237 Simplify configuration process
+    ST-223 Add option to wait for server to suspend or resume
 
 
 Version 2.0.18
